slide & category added

--- a/src/index.css
+++ b/src/index.css
@@ -140,6 +140,7 @@ body{
   
   .green-button:hover {
     background: linear-gradient(to right, #6a78ff, #2563eb); 
-    transform: scale(1.05); 
+    transform: scale(1.02); 
+    border: none;
   }
   
