--- a/src/swal.css
+++ b/src/swal.css
@@ -14,7 +14,7 @@
     font-weight: 600; 
     border-radius: 9999px; 
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
-    transition: background 0.3s, transform 0.3s; 
+    transition: all 0.3s, transform 0.3s; 
   }
   
   
@@ -36,7 +36,7 @@
     font-weight: 600; 
     border-radius: 9999px; 
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
-    transition: background 0.3s, transform 0.3s; 
+    transition: all 0.3s, transform 0.3s; 
   }
   
   .alert-button-error:hover {
