--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -6,23 +6,27 @@
 
 html {
   overflow-y: scroll;
+  font-family: "Poppins", serif;
 }
+
+
+
+
 .active {
   color: #3b82f6;
 }
 .dashboard-NavLink .active {
   color: rgba(255, 255, 255, 0.801);
-  background-color: rgba(0, 0, 255, 0.147);
-  box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.39);
-  /* border-right: 4px solid rgba(0, 0, 255, 0.442); */
-  border-radius: 6px;
+  border-right: 4px solid rgba(0, 0, 255, 0.442);
+  border-radius: 4px;
 }
 .dashboard-NavLink a {
   padding: 2px 0px 2px 12px;
+  transition: all 0.5s ease;
+  transition-duration: .5s;
+  border-right: 4px solid transparent;
 }
-body {
-  font-family: "Sora", serif;
-}
+
 
 .swal-button {
   display: inline-block;
@@ -121,7 +125,7 @@ body {
   background: linear-gradient(to right, #ec4899, #ef4444);
   color: white;
   font-weight: 600;
-  border-radius: 9999px;
+  border-radius: 12px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   background-size: 200%;
   background-position: left;
