--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -8,9 +8,6 @@ html {
   overflow-y: scroll;
   font-family: "Poppins", serif;
 }
-
-
-
 
 .active {
   color: #3b82f6;
@@ -23,10 +20,9 @@ html {
 .dashboard-NavLink a {
   padding: 2px 0px 2px 12px;
   transition: all 0.5s ease;
-  transition-duration: .5s;
+  transition-duration: 0.5s;
   border-right: 4px solid transparent;
 }
-
 
 .swal-button {
   display: inline-block;
@@ -145,7 +141,6 @@ html {
   border-radius: 12px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   transition: all 0.3s ease, background-position 0.3s ease;
-  /* background-size: 200%; */
   background-position: left;
 }
 
